--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Everything there is to know about me">
+  <meta name="author" content="862399467">
 
-  <title>John Doe - Business Administration</title>
+  <title>William Jeong - Pre business</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">William Jeong</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/williamjeong.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,49 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">William Jeong
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4"> A year or two ago, I enrolled into a marketing class/club. 
+        It was called the SIFMA class, which I think stood for “Securities Industry and Financial Markets Association” class. 
+        There, I learned about marketing, stocks, what they are used for, and how to read stocks. 
+        We were also taught on how to look for good stocks, whether it is for the long run, or only for a short period of time. 
+        During this time, we, me and the others in the class, competed in a stocks competition that was world wide, 
+        with hundreds of thousands of teams and competitors, and it was a competition to see who could raise the most amount of money. 
+        You were given a limited amount of fake money, and you were supposed to invest them into stocks, which were actually real time stocks. 
+        This means that if the stocks you invested in went down in real time, then yours also went down. 
+        It was a competition to see who was best with their money and who actually raised the most money.<br><br>
 
-        Enter bio here<br><br>
+        I actually didn’t know anything about stocks coming into this class, but I learned a whole lot about them going forward. 
+        My team invested in stocks which were well known, such as Tesla, NVIDIA, Apple, and etc. We also invested in stocks that I have never heard of before, 
+        but were actually really good. This competition lasted around a couple of weeks, but we didn’t do too bad. 
+        We were not losing too much money, but we weren’t raising a lot either. That is when we were taught to look at our stocks data. 
+        Meaning the data from years of stocks, to see if there were more pros than cons, to see if there were more money made than money lost, 
+        and this actually helped out a lot. We could see how much a stock made within a month, a year, to even 5 years. 
+        We saw the linear lines, to see if they made more than they lost, and if they lost money, we researched 
+        why they lost money. <br><br>
 
-        Enter bio here
-        </p>
+        Doing a lot of research eventually led us to change our stocks, and to invest smartly with a plan instead of going in blind. 
+        During the first few weeks, our team was not doing that well. We were ranked close to last, but as soon as we researched our stocks, 
+        we were actually able to see some improvements. I was able to see our improvements. I saw that our teams rose in ranks, and by the end, 
+        our team was ranked top 30 globally. This shocked us, and this also shocked our teacher, because of how well we did. 
+        After all this ended, It eventually led to me researching more about stocks. 
+        Later on, I even convinced my parents to invest in stocks as well, such as Apple, Tesla, etc., and 
+        they actually started to make more money. For now, I am not investing too much because I 
+        do not have much money, but by the time of next year, I will have accumulated enough knowledge 
+        from my research and I will invest more in stocks, from which I hope to make more money.
+       </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="socialicon-1" href="https://youtube.com/william1459">
+            <i class="fab fa-youtube"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/will1459">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="socialicon-3" href="https://instagram.com/william.1459">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:wjeon013@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +115,65 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Animals</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Self employeed</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Took care of people pets<br> 
+              • Sometimes slept over to take care of dogs<br>
+              • Took care of pets that were sick, lasting couple of days<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">November 2022- March 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Taekwondo Referee</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://AAU.com">Elite Taekwondo</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for judging contenstants<br>
+              • Gave scores and medals<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2018 - May 2023</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Taekwondo Instructor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://EliteTaekwondo.com">Elite Taekwondo</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped kids who needed it<br>
+            • Taught kids kicks and poomsae<br>
+            • Cleaned the school during the night<br>
+            • Looked over classes to see if my help was needed<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2019 - December 2022</span>
+          </div>
+        </div>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+          <div class="resume-content">
+            <h3 class="mb-0">Cyber Security</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://GHCHS.com">School club</a></div>
+            <p>
+            • Competed in tournamnets for coding<br>
+            • Broke through codes<br>
+            • Learned new coding<br>
+            
+
+          </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2019 - June 2021</span>
           </div>
         </div>
 
@@ -152,33 +192,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Pre Business</div>
+            <div>CHASS</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2023 - June 2027</span>
           </div>
         </div>
 
@@ -191,7 +209,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+             <img src="img/IMG_3589" width="500px">
+    <img src="img/IMG_3584.jpeg" width="500px"><br>
+    <img src="img/IMG_3585.jpeg" width="500px">
+    <img src="img/IMG_3586.jpeg" width="500px"><br>
+     <img src="img/IMG_3587.jpeg" width="500px">
+    <img src="img/IMG_3588.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +222,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> William Jeong</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
